--- a/css/style.scss
+++ b/css/style.scss
@@ -1385,7 +1385,7 @@ $lighterskills: #080e31;
                             ////////////////////// 
                             // APP TWO DESCRIPTION
                             .app-2-description {
-                                // position: fixed;
+                                position: fixed;
                                 top: 0;
                                 left: 100%;
                                 width: 100%;
@@ -1393,16 +1393,16 @@ $lighterskills: #080e31;
                                 display: block;
                                 background-color: $mainblue;
                                 // background-color: yellowgreen;
-                                margin: 4.5vh 0 0 0;
+                                margin: -6vh 0 0 0;
                                 transition: ease-in .8s;
                                 z-index: 98;
                                 .bordertwo {
                                     border: 4px solid $skillswhite;
                                     border-radius: 10px;
                                     margin: 0 auto;
-                                    margin: 10vh 0 0 2.5vw;
+                                    margin: 12vh 0 0 2.5vw;
                                     width: 88%;
-                                    height: 80%;
+                                    height: 78%;
                                     padding: 2vh;
                                     .topleveltwo {
                                         display: flex;
@@ -1414,8 +1414,8 @@ $lighterskills: #080e31;
                                             align-items: center;
                                             margin: 2.5vh 0 0 3vw;
                                             img {
-                                                width: 30vw;
-                                                height: 5vw;
+                                                width: 35vw;
+                                                height: 6vw;
                                             }
                                         }
                                         .sectiontitle {
@@ -1432,14 +1432,195 @@ $lighterskills: #080e31;
                                         .app2description {
                                             font-family: 'Inter', sans-serif;
                                             text-align: left;
-                                            font-size: 2.8vw;
-                                            margin: 5vh 0 0 0;
+                                            font-size: 2.5vw;
+                                            margin: 8vh 0 0 0;
                                             padding-left: 3vw;
+                                        }
+                                        .apptechnologiestwo {
+                                            margin: 5vh 0 0 2.5vw;
+                                            font-family: 'Inter', sans-serif;
+                                            font-size: 2.5vw;
+                                            h3 {
+                                                font-size: 3vw;
+                                            }
+                                            .apptechcirclestwo {
+                                                display: flex;
+                                                margin: 2vh 0 0 -1vw;
+                                                font-family: 'Inter', sans-serif;
+                                                gap: 4vw;
+                                                .apptechcircletwo {
+                                                    border: 1px solid $techcirclegreen;
+                                                    background-color: $techcirclegreen;
+                                                    border-radius: 50%;
+                                                    width: 18vw;
+                                                    height: 18vw;
+                                                    #react {
+                                                        display: flex;
+                                                        flex-direction: column;
+                                                        justify-content: center;
+                                                        align-items: center;
+                                                        gap: .5vh;
+                                                        height: 100%;
+                                                        img {
+                                                            width: 8vw;
+                                                            height: 8vw;
+                                                        }
+                                                        p {
+                                                            font-family: 'Inter', sans-serif;
+                                                            font-size: .8em;
+                                                            color: $hoverfonts;
+                                                        }
+                                                    }
+                                                    #express {
+                                                        display: flex;
+                                                        flex-direction: column;
+                                                        justify-content: center;
+                                                        align-items: center;
+                                                        gap: 1vh;
+                                                        height: 100%;
+                                                        img {
+                                                            width: 7vw;
+                                                            height: 7vw;
+                                                        }
+                                                        p {
+                                                            font-family: 'Inter', sans-serif;
+                                                            font-size: .8em;
+                                                            color: $hoverfonts;
+                                                        }
+                                                    }
+                                                    #mongo {
+                                                        display: flex;
+                                                        flex-direction: column;
+                                                        justify-content: center;
+                                                        align-items: center;
+                                                        gap: .3vh;
+                                                        height: 100%;
+                                                        
+                                                        img {
+                                                            // margin-top: -.2vh;
+                                                            width: 8.5vw;
+                                                            height: 8.5vw;
+                                                        }
+                                                        p {
+                                                            font-family: 'Inter', sans-serif;
+                                                            font-size: .8em;
+                                                            color: $hoverfonts;
+                                                        }
+                                                    }
+                                                }
+                                            }
+                                        }
+                                        .accomplishmentstwo {
+                                            margin: 4vh 0 0 0;
+                                            h3 {
+                                                font-family: 'Inter', sans-serif;
+                                                margin: 0 0 1vh 0;
+                                            }
+                                            p {
+                                                font-family: 'Inter', sans-serif;
+                                                font-size: 2.5vw;
+                                                line-height: 3.5vh;
+                                            }
+                                        }
+                                        .linkstwo {
+                                            margin: 3vh 0 0 .1vw;
+                                            display: flex;
+                                            gap: 5vw;
+                                            .linkto {
+                                                display: flex;
+                                                flex-direction: column;
+                                                justify-content: center;
+                                                align-items: center;
+                                                border: $hoverfonts 1px solid;
+                                                border-radius: 50%;
+                                                background-color: $skillswhite;
+                                                background-color: $skillswhite;
+                                                width: 8vw;
+                                                height: 8vw;
+                                                a {
+                                                    margin: .5vh 0 0 0;
+                                                    img {
+                                                        width: 6vw;
+                                                        height: 6vw;
+                                                    }
+                                                }
+                                                p {
+                                                    font-family: 'Inter', sans-serif;
+                                                    font-size: 3vw;
+                                                    font-weight: bold;
+                                                    color: $techcirclegreen;
+                                                }
+                                            }
+                                            .github {
+                                                display: flex;
+                                                flex-direction: column;
+                                                justify-content: center;
+                                                align-items: center;
+                                                border: $hoverfonts 1px solid;
+                                                border-radius: 50%;
+                                                background-color: $skillswhite;
+                                                // background-color: $hoverfonts;
+                                                width: 8vw;
+                                                height: 8vw;
+                                                a {
+                                                    margin: .5vh 0 0 0;
+                                                    img {
+                                                        width: 6vw;
+                                                        height: 6vw;
+                                                    }
+                                                }
+                                                p {
+                                                    font-family: 'Inter', sans-serif;
+                                                    font-size: 3vw;
+                                                    font-weight: bold;
+                                                    margin: 0 0 0 0;
+                                                    color: $techcirclegreen;
+                                                }
+                                            }
+                                        }
+                                    }
+                                }
+                                // Close Button
+                                .closeapp2 {
+                                    display: flex;
+                                    justify-content: center;
+                                    align-items: center;
+                                    margin: 3vh 0 0 0;
+                                    // background-color: #05607D;
+                                    .back_arrow_two {
+                                        background-color: $mainblue;
+                                        color: white;
+                                        border: none;
+                                        font-family: 'Inter', sans-serif;
+                                        font-size: 3vw;
+                                        font-weight: bold;
+                                        display: flex;
+                                        justify-content: center;
+                                        align-items: center;
+                                        img {
+                                            width: 4vw;
+                                            height: 4vw;
                                         }
                                     }
                                 } 
                             }
-
+                            .app-2-description.slide-in {
+                                left: 0;
+                            }
+                            ///////////////////////////////////////////////
+                            ///////////////////////////////////////////////
+                            ///////////////////////////////////////////////
+                            ///////////////////////////////////////////////
+                            ///////////////////////////////////////////////
+                            ///////////////////////////////////////////////
+                            ///////////////////////////////////////////////
+                            ///////////////////////////////////////////////
+                            ///////////////////////////////////////////////
+                            ///////////////////////////////////////////////
+                            ///////////////////////////////////////////////
+                            /// 
+                            /// APP 3 DESCRIPTION
+                            
                             /// PORTFOLIO CONTENT HERE
                             .portfoliooutlinetablet {
                                 display: flex;
