--- a/css/style.css
+++ b/css/style.css
@@ -1504,6 +1504,436 @@
     font-size: 7vw;
     font-family: "Inter", sans-serif;
   }
+  * body .tabletcontainer #blogtabletcontainer #blogtablet {
+    background-color: #146166;
+    color: white;
+    height: 100vh;
+  }
+  * body .tabletcontainer #blogtabletcontainer #blogtablet .topblogtablet {
+    display: flex;
+  }
+  * body .tabletcontainer #blogtabletcontainer #blogtablet .topblogtablet .titlemobile {
+    margin: 3vh 0 0 5vh;
+  }
+  * body .tabletcontainer #blogtabletcontainer #blogtablet .topblogtablet .titlemobile h1 {
+    font-size: 10vw;
+    font-family: "Inter", sans-serif;
+  }
+  * body .tabletcontainer #blogtabletcontainer #blogtablet #botblogtablet {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin: 0vh 0 0 0;
+    gap: 3vh;
+    padding: 1vh 1vh;
+  }
+  * body .tabletcontainer #blogtabletcontainer #blogtablet #botblogtablet .blogone-slide-in {
+    position: fixed;
+    top: 0;
+    left: 100%;
+    width: 100%;
+    height: 100vh;
+    display: block;
+    background-color: #146166;
+    margin: 4.5vh 0 0 0;
+    transition: ease-in 0.8s;
+    z-index: 98;
+  }
+  * body .tabletcontainer #blogtabletcontainer #blogtablet #botblogtablet .blogone-slide-in .blogone-border {
+    border: 4px solid #FFFFFF;
+    border-radius: 10px;
+    margin: 0 auto;
+    width: 88%;
+    height: 80%;
+    padding: 2vh;
+    overflow: hidden;
+  }
+  * body .tabletcontainer #blogtabletcontainer #blogtablet #botblogtablet .blogone-slide-in .blogone-border .blogcircle .blogoneheader {
+    display: flex;
+  }
+  * body .tabletcontainer #blogtabletcontainer #blogtablet #botblogtablet .blogone-slide-in .blogone-border .blogcircle .blogoneheader .blogonetitle {
+    border: 1px solid #080E2F;
+    background-color: #080E2F;
+    border-radius: 50%;
+    width: 40vw;
+    height: 40vw;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.521);
+  }
+  * body .tabletcontainer #blogtabletcontainer #blogtablet #botblogtablet .blogone-slide-in .blogone-border .blogcircle .blogoneheader .blogonetitle .outertitle {
+    border: 3px solid #080E2F;
+    background-color: #507e81;
+    border-radius: 50%;
+    width: 40vw;
+    height: 40vw;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  * body .tabletcontainer #blogtabletcontainer #blogtablet #botblogtablet .blogone-slide-in .blogone-border .blogcircle .blogoneheader .blogonetitle .outertitle .innertitle {
+    background-color: #080E2F;
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 37vw;
+    height: 38vw;
+  }
+  * body .tabletcontainer #blogtabletcontainer #blogtablet #botblogtablet .blogone-slide-in .blogone-border .blogcircle .blogoneheader .blogonetitle .outertitle .innertitle h1 {
+    font-family: "Inter", sans-serif;
+    font-size: 3vw;
+    padding: 0 0 0 0;
+  }
+  * body .tabletcontainer #blogtabletcontainer #blogtablet #botblogtablet .blogone-slide-in .blogone-border .blogcircle .blogoneheader .sectiontitle {
+    margin: 4vh 0 0 23vw;
+  }
+  * body .tabletcontainer #blogtabletcontainer #blogtablet #botblogtablet .blogone-slide-in .blogone-border .blogcircle .blogoneheader .sectiontitle p {
+    font-family: "Inter", sans-serif;
+    font-size: 6vw;
+    font-weight: bold;
+  }
+  * body .tabletcontainer #blogtabletcontainer #blogtablet #botblogtablet .blogone-slide-in .blogone-border .blogcircle .author {
+    border: 3px solid #507e81;
+    background-color: #080E2F;
+    border-radius: 50%;
+    width: 27vw;
+    height: 27vw;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: -15vh 0 0 45vw;
+    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.521);
+  }
+  * body .tabletcontainer #blogtabletcontainer #blogtablet #botblogtablet .blogone-slide-in .blogone-border .blogcircle .author p {
+    font-family: "Inter", sans-serif;
+    font-size: 2.5vw;
+    text-align: center;
+  }
+  * body .tabletcontainer #blogtabletcontainer #blogtablet #botblogtablet .blogone-slide-in .blogone-border .blogcircle .date {
+    border: 3px solid #507e81;
+    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.521);
+    background-color: #080E2F;
+    border-radius: 50%;
+    width: 20vw;
+    height: 20vw;
+    margin: 0vh 0 0 5vw;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 1vh;
+  }
+  * body .tabletcontainer #blogtabletcontainer #blogtablet #botblogtablet .blogone-slide-in .blogone-border .blogcircle .date .nums {
+    font-family: "Inter", sans-serif;
+    font-size: 2.3vw;
+    text-align: center;
+  }
+  * body .tabletcontainer #blogtabletcontainer #blogtablet #botblogtablet .blogone-slide-in .blogone-border .blogcircle .date .times {
+    font-family: "Inter", sans-serif;
+    font-size: 2vw;
+    text-align: center;
+  }
+  * body .tabletcontainer #blogtabletcontainer #blogtablet #botblogtablet .blogone-slide-in .blogone-border .blogcircle .bogoneoutline {
+    border: 3px solid #507e81;
+    background-color: #080E2F;
+    padding: 2vh;
+    border-radius: 50%;
+    width: 75vw;
+    height: 75vw;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    overflow: auto;
+    margin: -10vh 0 0 30vw;
+    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.521);
+  }
+  * body .tabletcontainer #blogtabletcontainer #blogtablet #botblogtablet .blogone-slide-in .blogone-border .blogcircle .bogoneoutline .blogonecontent {
+    font-family: "Inter", sans-serif;
+    font-size: 2.5vw;
+    text-align: center;
+    width: 50%;
+    margin: -7vh 10vw 0 0;
+    line-height: 2vh;
+    overflow-y: scroll;
+  }
+  * body .tabletcontainer #blogtabletcontainer #blogtablet #botblogtablet .blogone-slide-in .blogone-border .blogcircle .blogonesharescircle {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 2vw;
+    border: 3px solid #507e81;
+    background-color: #080E2F;
+    border-radius: 50%;
+    width: 25vw;
+    height: 25vw;
+    margin: -30vh 0 0 0;
+    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.521);
+  }
+  * body .tabletcontainer #blogtabletcontainer #blogtablet #botblogtablet .blogone-slide-in .blogone-border .blogcircle .blogonesharescircle .blogoneshares {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 1vw;
+    margin: 1vh 0 0 0;
+  }
+  * body .tabletcontainer #blogtabletcontainer #blogtablet #botblogtablet .blogone-slide-in .blogone-border .blogcircle .blogonesharescircle .blogoneshares a #twitter {
+    width: 6vw;
+    height: 6vw;
+  }
+  * body .tabletcontainer #blogtabletcontainer #blogtablet #botblogtablet .blogone-slide-in .blogone-border .blogcircle .blogonesharescircle .blogoneshares a #linkedin {
+    width: 6vw;
+    height: 6vw;
+  }
+  * body .tabletcontainer #blogtabletcontainer #blogtablet #botblogtablet .blogone-slide-in .blogone-border .blogcircle .blogonesharescircle .blogoneshares a #share {
+    width: 6vw;
+    height: 6vw;
+    margin: -1vh 0 0 0;
+  }
+  * body .tabletcontainer #blogtabletcontainer #blogtablet #botblogtablet .blogone-slide-in .blogonearrow {
+    margin: 3vh 0 0 40vw;
+  }
+  * body .tabletcontainer #blogtabletcontainer #blogtablet #botblogtablet .blogone-slide-in .blogonearrow button {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-decoration: none;
+    background-color: #146166;
+    border: none;
+  }
+  * body .tabletcontainer #blogtabletcontainer #blogtablet #botblogtablet .blogone-slide-in .blogonearrow button img {
+    width: 4vw;
+    height: 4vw;
+  }
+  * body .tabletcontainer #blogtabletcontainer #blogtablet #botblogtablet .blogone-slide-in .blogonearrow button p {
+    color: #FFFFFF;
+    font-family: "Inter", sans-serif;
+    font-size: 3vw;
+  }
+  * body .tabletcontainer #blogtabletcontainer #blogtablet #botblogtablet .blogone-slide-in.slide-in {
+    left: 0;
+  }
+  * body .tabletcontainer #blogtabletcontainer #blogtablet #botblogtablet .blogtwo-slide-in {
+    position: fixed;
+    top: 0;
+    left: 100%;
+    width: 100%;
+    height: 100vh;
+    display: block;
+    background-color: #146166;
+    margin: 4.5vh 0 0 0;
+    transition: ease-in 0.8s;
+    z-index: 98;
+  }
+  * body .tabletcontainer #blogtabletcontainer #blogtablet #botblogtablet .blogtwo-slide-in .blogtwo-border {
+    border: 4px solid #FFFFFF;
+    border-radius: 10px;
+    margin: 0 auto;
+    width: 88%;
+    height: 80%;
+    padding: 2vh;
+    overflow: hidden;
+  }
+  * body .tabletcontainer #blogtabletcontainer #blogtablet #botblogtablet .blogtwo-slide-in .blogtwo-border .blogcircle .blogtwoheader {
+    display: flex;
+  }
+  * body .tabletcontainer #blogtabletcontainer #blogtablet #botblogtablet .blogtwo-slide-in .blogtwo-border .blogcircle .blogtwoheader .blogtwotitle {
+    border: 1px solid #080E2F;
+    background-color: #080E2F;
+    border-radius: 50%;
+    width: 40vw;
+    height: 40vw;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.521);
+  }
+  * body .tabletcontainer #blogtabletcontainer #blogtablet #botblogtablet .blogtwo-slide-in .blogtwo-border .blogcircle .blogtwoheader .blogtwotitle h1 {
+    font-family: "Inter", sans-serif;
+    font-size: 3vw;
+    padding: 0 0 0 0;
+  }
+  * body .tabletcontainer #blogtabletcontainer #blogtablet #botblogtablet .blogtwo-slide-in .blogtwo-border .blogcircle .blogtwoheader .sectiontitle {
+    margin: 4vh 0 0 23vw;
+  }
+  * body .tabletcontainer #blogtabletcontainer #blogtablet #botblogtablet .blogtwo-slide-in .blogtwo-border .blogcircle .blogtwoheader .sectiontitle p {
+    font-family: "Inter", sans-serif;
+    font-size: 6vw;
+    font-weight: bold;
+  }
+  * body .tabletcontainer #blogtabletcontainer #blogtablet #botblogtablet .blogtwo-slide-in .blogtwo-border .blogcircle .author {
+    border: 1px solid #080E2F;
+    background-color: #080E2F;
+    border-radius: 50%;
+    width: 27vw;
+    height: 27vw;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: -15vh 0 0 45vw;
+    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.521);
+  }
+  * body .tabletcontainer #blogtabletcontainer #blogtablet #botblogtablet .blogtwo-slide-in .blogtwo-border .blogcircle .author p {
+    font-family: "Inter", sans-serif;
+    font-size: 2.5vw;
+    text-align: center;
+  }
+  * body .tabletcontainer #blogtabletcontainer #blogtablet #botblogtablet .blogtwo-slide-in .blogtwo-border .blogcircle .date {
+    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.521);
+    border: 1px solid #080E2F;
+    background-color: #080E2F;
+    border-radius: 50%;
+    width: 20vw;
+    height: 20vw;
+    margin: 0vh 0 0 5vw;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 1vh;
+  }
+  * body .tabletcontainer #blogtabletcontainer #blogtablet #botblogtablet .blogtwo-slide-in .blogtwo-border .blogcircle .date .nums {
+    font-family: "Inter", sans-serif;
+    font-size: 2.3vw;
+    text-align: center;
+  }
+  * body .tabletcontainer #blogtabletcontainer #blogtablet #botblogtablet .blogtwo-slide-in .blogtwo-border .blogcircle .date .times {
+    font-family: "Inter", sans-serif;
+    font-size: 2vw;
+    text-align: center;
+  }
+  * body .tabletcontainer #blogtabletcontainer #blogtablet #botblogtablet .blogtwo-slide-in .blogtwo-border .blogcircle .blogtwooutline {
+    border: 1px solid #080E2F;
+    background-color: #080E2F;
+    padding: 2vh;
+    border-radius: 50%;
+    width: 75vw;
+    height: 75vw;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    overflow: auto;
+    margin: -10vh 0 0 30vw;
+    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.521);
+  }
+  * body .tabletcontainer #blogtabletcontainer #blogtablet #botblogtablet .blogtwo-slide-in .blogtwo-border .blogcircle .blogtwooutline .blogonecontent {
+    font-family: "Inter", sans-serif;
+    font-size: 2.5vw;
+    text-align: center;
+    width: 50%;
+    margin: -7vh 10vw 0 0;
+    line-height: 2vh;
+    overflow-y: scroll;
+  }
+  * body .tabletcontainer #blogtabletcontainer #blogtablet #botblogtablet .blogtwo-slide-in .blogtwo-border .blogcircle .blogtwosharescircle {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 2vw;
+    border: 1px solid #080E2F;
+    background-color: #080E2F;
+    border-radius: 50%;
+    width: 25vw;
+    height: 25vw;
+    margin: -30vh 0 0 0;
+    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.521);
+  }
+  * body .tabletcontainer #blogtabletcontainer #blogtablet #botblogtablet .blogtwo-slide-in .blogtwo-border .blogcircle .blogtwosharescircle .blogoneshares {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 1vw;
+    margin: 1vh 0 0 0;
+  }
+  * body .tabletcontainer #blogtabletcontainer #blogtablet #botblogtablet .blogtwo-slide-in .blogtwo-border .blogcircle .blogtwosharescircle .blogoneshares a #twitter {
+    width: 6vw;
+    height: 6vw;
+  }
+  * body .tabletcontainer #blogtabletcontainer #blogtablet #botblogtablet .blogtwo-slide-in .blogtwo-border .blogcircle .blogtwosharescircle .blogoneshares a #linkedin {
+    width: 6vw;
+    height: 6vw;
+  }
+  * body .tabletcontainer #blogtabletcontainer #blogtablet #botblogtablet .blogtwo-slide-in .blogtwo-border .blogcircle .blogtwosharescircle .blogoneshares a #share {
+    width: 6vw;
+    height: 6vw;
+    margin: -1vh 0 0 0;
+  }
+  * body .tabletcontainer #blogtabletcontainer #blogtablet #botblogtablet .blogtwo-slide-in .blogonearrow {
+    margin: 3vh 0 0 40vw;
+  }
+  * body .tabletcontainer #blogtabletcontainer #blogtablet #botblogtablet .blogtwo-slide-in .blogonearrow button {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-decoration: none;
+    background-color: #146166;
+    border: none;
+  }
+  * body .tabletcontainer #blogtabletcontainer #blogtablet #botblogtablet .blogtwo-slide-in .blogonearrow button img {
+    width: 4vw;
+    height: 4vw;
+  }
+  * body .tabletcontainer #blogtabletcontainer #blogtablet #botblogtablet .blogtwo-slide-in .blogonearrow button p {
+    color: #FFFFFF;
+    font-family: "Inter", sans-serif;
+    font-size: 3vw;
+  }
+  * body .tabletcontainer #blogtabletcontainer #blogtablet #botblogtablet .blogtwo-slide-in.slide-in {
+    left: 0;
+  }
+  * body .tabletcontainer #blogtabletcontainer #blogtablet #botblogtablet .botblogoutline {
+    display: flex;
+    flex-direction: column;
+    overflow: hidden;
+    overflow-y: scroll;
+    justify-content: center;
+    align-items: center;
+    margin: 2vh 0 0 0;
+    gap: 3vh;
+  }
+  * body .tabletcontainer #blogtabletcontainer #blogtablet #botblogtablet .botblogoutline .blogcircles {
+    background-color: #080E2F;
+    background-color: #507e81;
+    border: 5px solid #080E2F;
+    border-radius: 50%;
+    width: 35vw;
+    height: 35vw;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 1vw;
+  }
+  * body .tabletcontainer #blogtabletcontainer #blogtablet #botblogtablet .botblogoutline .blogcircles .blogcontent {
+    border: 3px solid #080E2F;
+    border-radius: 50%;
+    background-color: #080E2F;
+    width: 35vw;
+    height: 35vw;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 2vh;
+  }
+  * body .tabletcontainer #blogtabletcontainer #blogtablet #botblogtablet .botblogoutline .blogcircles .blogcontent .blogcircle {
+    text-decoration: none;
+    background-color: #080E2F;
+    color: white;
+    border: none;
+    display: flex;
+    flex-direction: column;
+    align-items: right;
+    gap: 1vh;
+  }
+  * body .tabletcontainer #blogtabletcontainer #blogtablet #botblogtablet .botblogoutline .blogcircles .blogcontent .blogcircle h2 {
+    font-size: 3vw;
+    font-family: "Inter", sans-serif;
+  }
+  * body .tabletcontainer #blogtabletcontainer #blogtablet #botblogtablet .botblogoutline .blogcircles .blogcontent .blogcircle p {
+    font-size: 2vw;
+    font-family: "Inter", sans-serif;
+  }
   * body.no-scroll {
     overflow: hidden;
     position: fixed;
